# Fall-24-Projects

./: .README.md.swp
Architecture/: Assignment0.circ
Operating Systems/Assign-3/: shell.java
Operating Systems/Assign1/src/: Assign1.java  main.java
Operating Systems/Assign2/: build.gradle
Operating Systems/Assign2/src/: Assn2.java  E.java  Fac.java  Fib.java  help.java
Operating Systems/Assign3/: build.gradle
Operating Systems/Assign3/src/: .README.md.swp  Shell.java  shell.java
Operating Systems/Assign4/: .gitignore  build.gradle
Operating Systems/Assign4/src/: Bpp.java  Calculator.java  test.java
Operating Systems/Assn5/: .gitignore
Operating Systems/Assn5/Assn5-Starter/: Platform.java  SchedulerFCFS.java  SchedulerPriority.java  SchedulerRR.java  SchedulerSJF.java  SchedulerSRTF.java
Operating Systems/Assn6/: build.gradle
Operating Systems/Assn6/src/: Assign6.java  TaskFIFO.java  TaskLRU.java  TaskMRU.java
WebApps/Assign1/: server.py
WebApps/Assign1/static/: code.js  styles.css
WebApps/Assign1/templates/: about.html  experience.html  index.html  projects.html
WebApps/Assign2/: pyproject.toml
WebApps/Assign3/: pyproject.toml
WebApps/Typing-Tutor/: README.md  package-lock.json  package.json
WebApps/counter-demo/: package-lock.json  package.json
WebApps/django_demo/: pyproject.toml
WebApps/django_demo/myproject/: db.sqlite3
WebApps/django_demo/myproject/myapp/: views.py
WebApps/django_demo/myproject/myapp/templates/django_demo/: index.html
WebApps/django_demo/myproject/myproject/: settings.py  urls.py
(+56 files in other folders)
