[tool.poetry]
name = "django_demo"
version = "0.1.0"
description = ""
authors = ["rseeley <roxseeley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
